--- a/src/classifier_holdout/summed_embeddings_generation/Snakefile
+++ b/src/classifier_holdout/summed_embeddings_generation/Snakefile
@@ -5,8 +5,13 @@ import itertools
 all_cancers = config['cancers']
 modalities = config['modalities']
 joined_cancers = '_'.join(all_cancers)
+
 requested_walk_amounts = range(3, config['classifier_max_walk_amounts'] + 1)
 requested_walk_distance = range(3, config['classifier_max_walk_distance'] + 1)
+
+# if you want iterations numbered 1..N, use +1
+run_iterations = range(config['run_iterations'])
+
 cancer_arg = ' '.join(all_cancers)
 
 # Generate all modality combinations of size >= 2
@@ -18,26 +23,37 @@ modality_combinations = [
 rule all:
     input:
         expand(
-            "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/test_summed_embeddings.h5",
+            "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/summed_embeddings.h5",
             cancers=[joined_cancers],
             walk_amount=requested_walk_amounts,
             walk_distance=requested_walk_distance,
-            modalities=modality_combinations
+            modalities=modality_combinations,
+            iteration=run_iterations
         ),
         expand(
-            "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/train_summed_embeddings.h5",
+            "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/test_summed_embeddings.h5",
             cancers=[joined_cancers],
             walk_amount=requested_walk_amounts,
             walk_distance=requested_walk_distance,
-            modalities=modality_combinations
+            modalities=modality_combinations,
+            iteration=run_iterations
+        ),
+        expand(
+            "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/train_summed_embeddings.h5",
+            cancers=[joined_cancers],
+            walk_amount=requested_walk_amounts,
+            walk_distance=requested_walk_distance,
+            modalities=modality_combinations,
+            iteration=run_iterations
         )
 
 rule create_summed_embeddings:
     input:
         f"results/embeddings/{joined_cancers}_classifier.h5"
     output:
-        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/train_summed_embeddings.h5",
-        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/test_summed_embeddings.h5"
+        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/train_summed_embeddings.h5",
+        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/test_summed_embeddings.h5",
+        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/summed_embeddings.h5"
     params:
         cancer_list=cancer_arg,
         modality_string=lambda wildcards: wildcards.modalities.replace('_', ' ')
@@ -47,5 +63,6 @@ rule create_summed_embeddings:
             -c {params.cancer_list} \
             -a {wildcards.walk_amount} \
             -w {wildcards.walk_distance} \
-            -m {params.modality_string}
+            -m {params.modality_string} \
+            -i {wildcards.iteration}
         """
