--- a/src/classifier_latent_dims/summed_embeddings_generation/Snakefile
+++ b/src/classifier_latent_dims/summed_embeddings_generation/Snakefile
@@ -3,16 +3,17 @@ configfile: './config.yaml'
 import itertools
 
 all_cancers = config['cancers']
-modalities = config['modalities']
+modalities = ['rna', 'mutations']
 joined_cancers = '_'.join(all_cancers)
 
-requested_walk_amounts = range(3, config['classifier_max_walk_amounts'] + 1)
-requested_walk_distance = range(3, config['classifier_max_walk_distance'] + 1)
+requested_walk_amounts = range(5, 5 + 1)
+requested_walk_distance = range(5, 5 + 1)
 
 # if you want iterations numbered 1..N, use +1
 run_iterations = range(config['run_iterations'])
 
 cancer_arg = ' '.join(all_cancers)
+latent_dims = [50, 100, 150, 200, 250, 300, 350, 400, 450, 500, 550, 600, 650, 700]
 
 # Generate all modality combinations of size >= 2
 modality_combinations = [
@@ -23,7 +24,8 @@ modality_combinations = [
 rule all:
     input:
         expand(
-            "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/summed_embeddings.h5",
+            "results/classifier_latent_dims/summed_embeddings/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/summed_embeddings.h5",
+            latent_dim=latent_dims,
             cancers=[joined_cancers],
             walk_amount=requested_walk_amounts,
             walk_distance=requested_walk_distance,
@@ -31,7 +33,8 @@ rule all:
             iteration=run_iterations
         ),
         expand(
-            "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/test_summed_embeddings.h5",
+            "results/classifier_latent_dims/summed_embeddings/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/test_summed_embeddings.h5",
+            latent_dim=latent_dims,
             cancers=[joined_cancers],
             walk_amount=requested_walk_amounts,
             walk_distance=requested_walk_distance,
@@ -39,7 +42,8 @@ rule all:
             iteration=run_iterations
         ),
         expand(
-            "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/train_summed_embeddings.h5",
+            "results/classifier_latent_dims/summed_embeddings/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/train_summed_embeddings.h5",
+            latent_dim=latent_dims,
             cancers=[joined_cancers],
             walk_amount=requested_walk_amounts,
             walk_distance=requested_walk_distance,
@@ -49,20 +53,20 @@ rule all:
 
 rule create_summed_embeddings:
     input:
-        f"results/embeddings/{joined_cancers}_classifier.h5"
+        "results/embeddings/h5/{latent_dim}/{cancers}_classifier.h5"
     output:
-        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/train_summed_embeddings.h5",
-        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/test_summed_embeddings.h5",
-        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/summed_embeddings.h5"
+        "results/classifier_latent_dims/summed_embeddings/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/train_summed_embeddings.h5",
+        "results/classifier_latent_dims/summed_embeddings/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/test_summed_embeddings.h5",
+        "results/classifier_latent_dims/summed_embeddings/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/summed_embeddings.h5"
     params:
         cancer_list=cancer_arg,
         modality_string=lambda wildcards: wildcards.modalities.replace('_', ' ')
     shell:
         """
-        python ./src/classifier_holdout/summed_embeddings_generation/3_01_create_summed_embeddings.py \
+        python ./src/classifier_latent_dims/summed_embeddings_generation/3_01_create_summed_embeddings.py \
             -c {params.cancer_list} \
             -a {wildcards.walk_amount} \
             -w {wildcards.walk_distance} \
-            -m {params.modality_string} \
-            -i {wildcards.iteration}
+            -i {wildcards.iteration} \
+            -ld {wildcards.latent_dim}
         """
