--- a/src/classifier_latent_dims/models/Snakefile
+++ b/src/classifier_latent_dims/models/Snakefile
@@ -4,16 +4,17 @@ import itertools
 
 # === Load config ===
 all_cancers = config['cancers']
-modalities = config['modalities']
+modalities = ['rna', 'mutations']
 joined_cancers = '_'.join(all_cancers)
-requested_walk_amounts = range(3, config['classifier_max_walk_amounts'] + 1)
-requested_walk_distance = range(3, config['classifier_max_walk_distance'] + 1)
+requested_walk_amounts = range(5, 5 + 1)
+requested_walk_distance = range(5, 5 + 1)
 run_iterations = range(config['run_iterations'])
 cancer_arg = ' '.join(all_cancers)
+latent_dims = [50, 100, 150, 200, 250, 300, 350, 400, 450, 500, 550, 600, 650, 700]
 
 # === All valid combinations of modalities (min size = 2) ===
 modality_combinations = [
-    "_".join(sorted(combo)) for r in range(2, len(modalities) + 1)
+    "_".join(combo) for r in range(2, len(modalities) + 1)
     for combo in itertools.combinations(modalities, r)
 ]
 
@@ -21,7 +22,8 @@ modality_combinations = [
 rule all:
     input:
         expand(
-            "results/classifier_holdout/classification/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/history.csv",
+            "results/classifier_latent_dims/classification/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/history.csv",
+            latent_dim=latent_dims,
             cancers=[joined_cancers],
             modalities=modality_combinations,
             walk_amount=requested_walk_amounts,
@@ -29,7 +31,8 @@ rule all:
             iteration=run_iterations
         ),
         expand(
-            "results/classifier_holdout/classification/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/results.csv",
+            "results/classifier_latent_dims/classification/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/results.csv",
+            latent_dim=latent_dims,
             cancers=[joined_cancers],
             modalities=modality_combinations,
             walk_amount=requested_walk_amounts,
@@ -37,7 +40,8 @@ rule all:
             iteration=run_iterations
         ),
         expand(
-            "results/classifier_holdout/classification/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/predictions.csv",
+            "results/classifier_latent_dims/classification/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/predictions.csv",
+            latent_dim=latent_dims,
             cancers=[joined_cancers],
             modalities=modality_combinations,
             walk_amount=requested_walk_amounts,
@@ -47,22 +51,22 @@ rule all:
 
 rule run_classification:
     input:
-        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/train_summed_embeddings.h5",
-        "results/classifier_holdout/summed_embeddings/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/test_summed_embeddings.h5"
+        "results/classifier_latent_dims/summed_embeddings/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/train_summed_embeddings.h5",
+        "results/classifier_latent_dims/summed_embeddings/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/test_summed_embeddings.h5"
     output:
-        "results/classifier_holdout/classification/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/history.csv",
-        "results/classifier_holdout/classification/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/results.csv",
-        "results/classifier_holdout/classification/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/predictions.csv"
+        "results/classifier_latent_dims/classification/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/history.csv",
+        "results/classifier_latent_dims/classification/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/results.csv",
+        "results/classifier_latent_dims/classification/{latent_dim}/{cancers}/{modalities}/{walk_distance}_{walk_amount}/{iteration}/predictions.csv"
     params:
         cancer_list=cancer_arg,
         modality_string=lambda wildcards: wildcards.modalities.replace('_', ' ')
     threads: 1
     shell:
         """
-        python ./src/classifier_holdout/models/4_01_cancer_classifier.py \
+        python ./src/classifier_latent_dims/models/4_01_cancer_classifier.py \
             -c {params.cancer_list} \
             -a {wildcards.walk_amount} \
             -w {wildcards.walk_distance} \
             -i {wildcards.iteration} \
-            -m {params.modality_string}
+            -ld {wildcards.latent_dim}
         """
