--- a/src/classifier_latent_dims/summed_embeddings_generation/Snakefile
+++ b/src/classifier_latent_dims/summed_embeddings_generation/Snakefile
@@ -15,9 +15,9 @@ run_iterations = range(config['run_iterations'])
 cancer_arg = ' '.join(all_cancers)
 latent_dims = [50, 100, 150, 200, 250, 300, 350, 400, 450, 500, 550, 600, 650, 700]
 
-# Generate all modality combinations of size >= 2
+# Generate all modality combinations of size >= 2 (preserve order, don't sort)
 modality_combinations = [
-    "_".join(sorted(combo)) for r in range(2, len(modalities)+1)
+    "_".join(combo) for r in range(2, len(modalities)+1)
     for combo in itertools.combinations(modalities, r)
 ]
 
